test/files/neg/t4851.check
S.scala:4: warning: adaptation of an empty argument list by inserting () is deprecated: leaky (Object-receiving) target makes this especially dangerous
        signature: J(x: Object): J
  given arguments: <none>
 after adaptation: new J((): Unit)
  val x1 = new J
           ^
S.scala:5: warning: adaptation of an empty argument list by inserting () is deprecated: leaky (Object-receiving) target makes this especially dangerous
        signature: J(x: Object): J
  given arguments: <none>
 after adaptation: new J((): Unit)
  val x2 = new J()
           ^
S.scala:6: warning: adapted the argument list to the expected 5-tuple: add additional parens instead
        signature: J(x: Object): J
  given arguments: 1, 2, 3, 4, 5
 after adaptation: new J((1, 2, 3, 4, 5): (Int, Int, Int, Int, Int))
  val x3 = new J(1, 2, 3, 4, 5)
           ^
S.scala:8: warning: adapted the argument list to the expected 3-tuple: add additional parens instead
        signature: Some.apply[A](value: A): Some[A]
  given arguments: 1, 2, 3
 after adaptation: Some((1, 2, 3): (Int, Int, Int))
  val y1 = Some(1, 2, 3)
               ^
S.scala:9: warning: adapted the argument list to the expected 3-tuple: add additional parens instead
        signature: Some(value: A): Some[A]
  given arguments: 1, 2, 3
 after adaptation: new Some((1, 2, 3): (Int, Int, Int))
  val y2 = new Some(1, 2, 3)
           ^
S.scala:11: warning: adaptation of an empty argument list by inserting () is deprecated: this is unlikely to be what you want
        signature: J2(x: T): J2[T]
  given arguments: <none>
 after adaptation: new J2((): Unit)
  val z1 = new J2
           ^
S.scala:12: warning: adaptation of an empty argument list by inserting () is deprecated: this is unlikely to be what you want
        signature: J2(x: T): J2[T]
  given arguments: <none>
 after adaptation: new J2((): Unit)
  val z2 = new J2()
           ^
S.scala:16: warning: adapted the argument list to the expected 3-tuple: add additional parens instead
        signature: Test.anyId(a: Any): Any
  given arguments: 1, 2, 3
 after adaptation: Test.anyId((1, 2, 3): (Int, Int, Int))
  val w1 = anyId(1, 2 ,3)
                ^
error: No warnings can be incurred under -Werror.
8 warnings
1 error
